--- a/team_fixtures.html
+++ b/team_fixtures.html
@@ -52,8 +52,8 @@
 
 <section>
   <h2 class="text-2xl mb-4">Groups</h2>
-  <p><strong>Group A:</strong> Ayon Roy, Subhojit Dutta, Ritam Chowdhury</p>
-  <p><strong>Group B:</strong> Shubhanjan Basu, Srinjoy Kundu, Subhamoy Das</p>
+  <p><strong>Group A:</strong> Thunderbolt, Red Bulls Eleven, Messiah FC</p>
+  <p><strong>Group B:</strong> White Panthers, Strawhat pirates, Amingos FC</p>
 </section>
 
 <section>
@@ -67,18 +67,18 @@
       </tr>
     </thead>
     <tbody>
-      <tr><td>09:00–09:22</td><td>Group A</td><td>Ayon Roy vs Subhojit Dutta</td></tr>
-      <tr><td>09:22–09:44</td><td>Group B</td><td>Shubhanjan Basu vs Srinjoy Kundu</td></tr>
-      <tr><td>09:44–10:06</td><td>Group A</td><td>Subhojit Dutta vs Ritam Chowdhury</td></tr>
-      <tr><td>10:06–10:28</td><td>Group B</td><td>Srinjoy Kundu vs Subhamoy Das</td></tr>
-      <tr><td>10:28–10:50</td><td>Group A</td><td>Ritam Chowdhury vs Ayon Roy</td></tr>
-      <tr><td>10:50–11:12</td><td>Group B</td><td>Subhamoy Das vs Shubhanjan Basu</td></tr>
-      <tr><td>11:12–11:34</td><td>Group A</td><td>Subhojit Dutta vs Ayon Roy</td></tr>
-      <tr><td>11:34–11:56</td><td>Group B</td><td>Srinjoy Kundu vs Shubhanjan Basu</td></tr>
-      <tr><td>11:56–12:18</td><td>Group A</td><td>Ritam Chowdhury vs Subhojit Dutta</td></tr>
-      <tr><td>12:18–12:40</td><td>Group B</td><td>Subhamoy Das vs Srinjoy Kundu</td></tr>
-      <tr><td>12:40–13:02</td><td>Group A</td><td>Ayon Roy vs Ritam Chowdhury</td></tr>
-      <tr><td>13:02–13:24</td><td>Group B</td><td>Shubhanjan Basu vs Subhamoy Das</td></tr>
+      <tr><td>09:00–09:22</td><td>Group A</td><td>Thunderbolt vs Red Bulls Eleven</td></tr>
+      <tr><td>09:22–09:44</td><td>Group B</td><td>White Panthers vs Strawhat pirates</td></tr>
+      <tr><td>09:44–10:06</td><td>Group A</td><td>Red Bulls Eleven vs Messiah FC</td></tr>
+      <tr><td>10:06–10:28</td><td>Group B</td><td>Strawhat pirates vs Amingos FC</td></tr>
+      <tr><td>10:28–10:50</td><td>Group A</td><td>Messiah FC vs Thunderbolt</td></tr>
+      <tr><td>10:50–11:12</td><td>Group B</td><td>Amingos FC vs White Panthers</td></tr>
+      <tr><td>11:12–11:34</td><td>Group A</td><td>Red Bulls Eleven vs Thunderbolt</td></tr>
+      <tr><td>11:34–11:56</td><td>Group B</td><td>Strawhat pirates vs White Panthers</td></tr>
+      <tr><td>11:56–12:18</td><td>Group A</td><td>Messiah FC vs Red Bulls Eleven</td></tr>
+      <tr><td>12:18–12:40</td><td>Group B</td><td>Amingos FC vs Strawhat pirates</td></tr>
+      <tr><td>12:40–13:02</td><td>Group A</td><td>Thunderbolt vs Messiah FC</td></tr>
+      <tr><td>13:02–13:24</td><td>Group B</td><td>White Panthers vs Amingos FC</td></tr>
     </tbody>
   </table>
 </section>
@@ -119,3 +119,4 @@
 
 </body>
 </html>
+
