--- a/team_list.html
+++ b/team_list.html
@@ -92,12 +92,12 @@
   </main>
   <script>
     const TEAMS = [
-      { name: 'Ayon Roy' },
-      { name: 'Subhojit Dutta' },
-      { name: 'Ritam Chowdhury' },
-      { name: 'Shubhanjan Basu' },
-      { name: 'Srinjoy Kundu' },
-      { name: 'Subhamoy Das' },
+      { name: 'Thunderbolt' },
+      { name: 'Red Bulls Eleven' },
+      { name: 'Messiah FC' },
+      { name: 'White Panthers' },
+      { name: 'Strawhat pirates' },
+      { name: 'Amingos FC' },
     ];
     const SALES = [
       { teamIndex: 0, playerName: 'Ayon Roy', position: 'Defence', price: 0},
