--- a/team_list.html
+++ b/team_list.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Independence Cup 2025 - Teams & Players</title>
+  <title>Independence Cup 2025 - Team List</title>
   <script src="https://cdn.tailwindcss.com"></script>
   <style>
     body {
@@ -166,10 +166,10 @@
 </head>
 <body>
   <main class="max-w-4xl mx-auto">
-    <h1 class="text-3xl font-bold mb-6 text-center">Independence Cup 2025 - Teams & Players</h1>
+    <h1 class="text-3xl font-bold mb-6 text-center">Independence Cup 2025 - Team List</h1>
     <!-- Team Tabs -->
     <section class="bg-white rounded-2xl shadow p-6">
-      <h2 class="text-xl font-semibold mb-4">Teams & Players</h2>
+      <h2 class="text-xl font-semibold mb-4">Team List</h2>
       <!-- Tabs -->
       <div id="tabs" class="tabs"></div>
       <!-- Team content -->
